# now-android

./: .gitignore  Android构建指南.md  build-android.bat  download-platform-tools.bat  install-android-sdk.bat  package-lock.json  package.json  setup-android.bat  setup-env.bat  一键设置.bat  手动安装指南.md  环境状态报告.md  环境设置指南.md
.workbuddy/: expert-history.json
now-android/: package-lock.json  package.json  tsconfig.json  (+2 more)
now-android/src-tauri/: Cargo.toml  tauri.conf.json
now-android/src-tauri/.cargo/: aarch64-clang.bat  aarch64-clangxx.bat  config.toml
now-android/src-tauri/resources/official_seed/: README.md  app_config.json
now-android/src-tauri/resources/official_seed/clipboard_data/默认库/: full_data.json  metadata.json
now-android/src-tauri/resources/official_seed/clipboard_data/默认库/readable_markdown/✉️ HR/: 🎈 活动策划，请策划一个.md  🎓 培训大纲，请为新入职.md  🎯 指标设定，请为[部门.md  💬 绩效面谈，我需要给一.md  📄 JD撰写，请为[职位.md  📋 面试提纲，请针对[职.md  📢 通知撰写，请撰写一份.md  🔎 简历初筛，我将上传_.md
now-android/src-tauri/resources/official_seed/clipboard_data/默认库/readable_markdown/🎙️配音/: ⚡ ️ 动效.md  🌈 ️ 音色.md  🍃 ️ 环境音效.md  🎢 ️ 上升音效_ 空间.md  🎵 ️ 音乐.md  👣 ️ 拟声.md  💫 ️ 转场音效.md  🗣️ ️ 旁白.md
now-android/src-tauri/resources/official_seed/clipboard_data/默认库/readable_markdown/🎯运营/: 🎬 视频脚本撰写_ 请创.md  👋 社群欢迎语，为[行业.md  👥 用户画像与需求洞察_.md  💥 爆款文章标题生成，针.md  📅 营销活动全案_ 请作.md  📉 数据分析报告解读_.md  📧 邮件营销，撰写一封针.md  📱 小红书风格文案_ 针.md
now-android/src-tauri/resources/official_seed/clipboard_data/默认库/readable_markdown/🐉 产品/: 交互设计建议.md  功能需求文档 (PRD).md  头脑风暴.md  竞品分析.md
now-android/src-tauri/resources/official_seed/clipboard_data/默认库/readable_markdown/🐳 测试/: ⏲️ 性能_压力测试指标.md  📏 边界值与极端分析，请.md  📱 兼容性测试，请针对[.md  🔌 接口测试场景_ 请为.md  🔒 安全性渗透测试，从安.md  🕵️ 探索性测试启发，如.md  🗒️ 基础功能用例生成_.md  🤖 自动化测试脚本编写，.md
now-android/src-tauri/src/: db.rs  lib.rs  main.rs
now-android/src-tauri/src/commands/: files.rs  license.rs  mod.rs
now-android/src-tauri/src/sync/: api.rs  auth.rs  discovery.rs  mod.rs  server.rs
(+163 files in other folders)
