[package]
name = "now-android"
version = "0.1.0"
description = "Now Android App"
authors = ["you"]
edition = "2021"
default-run = "now-android"

[lib]
name = "now_android_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2.3.4"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
image = "0.25.9"
uuid = { version = "1.20.0", features = ["v4"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
base64 = "0.22.1"
regex = "1.12.2"
dirs = "6"
chrono = "0.4"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"

[target.'cfg(target_os = "android")'.dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.1", features = ["json", "blocking"] }
image = "0.25.9"
uuid = { version = "1.20.0", features = ["v4"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
base64 = "0.22.1"
regex = "1.12.2"
dirs = "6"
chrono = "0.4"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
